# llpllpp

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac  llpllppv.0.pc.in  reconf-clang-release.sh  reconf-clang.sh  reconf-gcc.sh
config/: .gitignore
data/: 20.fas  20.tre  small-rooted.tre  small.nex  small.phy  small.tre
examples/: Makefile.am  newick-fasta-optimize-one-edge.cpp  newick-fasta-rooted.cpp  newick-fasta-unrooted.cpp  partial-traversal.cpp  protein-list.cpp
llpllpp/: Makefile.am  aa_models.cpp  aa_models.hpp  base_includes.hpp  dsct_prob_model.cpp  dsct_prob_model.hpp  instance.cpp  instance.hpp  llpllpp.hpp  model_storage_description.hpp  nr.cpp  nr.hpp  otus.hpp  parsed_matrix.cpp  parsed_matrix.hpp  partitioned_data.cpp  partitioned_data.hpp  phylo_calculator.cpp  phylo_calculator.hpp  pll_exception.hpp  tree.cpp  tree.hpp  util.hpp
test/: Makefile.am  demand-all-lines.py  nfr-template.txt  nfu-template.txt  partial-template.txt  protein-list-template.txt
